# MPPP

./: MANIFEST.in  Makefile  README  conf.py  config.nrlx052  config_nrlx052  configure  configure.ac  configure.in  def.mk.in  offline.profile  setup.cfg  setup.env.in  setup.py  source_me
cfg/: .profile_msgpp.in  Makefile.in  msgpp_config.py.in
cst/: C0429_1999_S0700_0900.LON  C0556_1747_S0512_0512.LON  Makefile  msg_coverage_CEuro.euro.hdf  msg_coverage_CEuro.euro4.hdf  msg_coverage_CEuro.mesanX.hdf  msg_coverage_CEuro.nswe.hdf  msg_coverage_CEuro.scan.hdf  msg_coverage_CEuro.sswe.hdf  msg_coverage_Europe.euro.hdf  msg_coverage_Europe.euro4.hdf  msg_coverage_Europe.eurotv.hdf  msg_coverage_Europe.mesanX.hdf  msg_coverage_Europe.scan.hdf  msg_coverage_Europe.scan2.hdf  msg_coverage_Europe.sswe.hdf  msg_coverage_EuropeCanary.euro.hdf  msg_coverage_EuropeCanary.euro4.hdf  msg_coverage_EuropeCanary.eurotv.hdf  msg_coverage_EuropeCanary.mesanX.hdf  msg_coverage_EuropeCanary.scan.hdf
data/: C0429_1999_S0700_0900.LAT  C0429_1999_S0700_0900.SAT_AZI  C0429_1999_S0700_0900.SAT_ZEN  C0556_1747_S0512_0512.LAT  Makefile
doc/source/: conf.py  coverage.rst  ctth.rst  ctype.rst  geo_image.rst  image.rst  index.rst  install.rst  meteosat09.rst  misc_utils.rst  msg_coverage.rst  msg_data.rst  palettes.rst  quickstart.rst  sat_ext.rst  satellite.rst  satellites_h.rst  time_utils.rst
etc/: .profile_msgpp.in  Makefile  Makefile.in  geo_image.cfg  logging.cfg  logging.conf  meteosat.cfg  metop.cfg  msgpp_config.py.in  noaa.cfg  offline.profile  products.py  terra.cfg
etc/init.d/: Makefile  nwcsaf_msg_pp_start.sh
lib/: Makefile.in  coverage.py  geo_image.py  image.py  image_processing.py  meteosat09.py  misc_utils.py  msg_communications.py  msg_coverage.py  msg_ctth.py  msg_ctype.py  msg_ctype2radar.py  msg_data.py  msg_n2inject.ksh.in  msg_remap_all_Oper.py  msg_remap_util.py  msg_rgb_remap_all_Oper.py  satellite.py  satellite_instrument.py  smhi_safnwc_legends.py  tm_msg_postproc.ksh.in
lib/attic/: msg_PutProducts2ftpserver.ksh  msg_PutProducts2ftpserver.py  msg_cmask_remap.py  msg_ctype_prod01.py  msg_rgb_remap.py  msg_rgb_remap_all_Oper.ksh  seviri_linecol_from_lonlat.py
pp/: __init__.py  utils.py
pp/doc/source/: conf.py  rs_images.rst
pp/geo_image/: __init__.py  geo_image.py  image.py  image_processing.py
pp/meteosat/: __init__.py  meteosat.cfg  meteosat09.py  msg_ctth.py  msg_ctype.py  msg_ctype2radar.py  msg_remap_util.py  py_msgmodule.c  time_utils.py
pp/metop/: __init__.py  metop.py
pp/noaa/: __init__.py  noaa.py
pp/satellite/: __init__.py  coverage.py  palettes.py  satellite.py
pp/terra/: __init__.py  ppsPrepareModis.py  terra.py
report/: daily_plot.py  daily_report.py
scr/: Makefile.in  geo_image.py  image_processing.py  misc_utils.py  msg_PutProducts2ftpserver.py  msg_cmask_remap.py  msg_communications.py  msg_coverage.py  msg_ctth_remap.py  msg_ctype2radar.py  msg_ctype_prod01.py  msg_ctype_products.py  msg_ctype_remap.py  msg_image_manipulation.py  msg_n2inject.ksh.in  msg_remap_all.ksh  msg_remap_all.ksh.in  msg_remap_all.py  msg_remap_all_Oper.ksh  msg_remap_all_Oper.ksh.in  msg_remap_all_Oper.py  msg_remap_util.py  msg_rgb_remap.py  msg_rgb_remap_all.py  msg_rgb_remap_all_Oper.py  msg_write2hdf.py  seviri_lonlat.py  seviri_lonlat_from_linecol.py  smhi_safnwc_legends.py  time_utils.py  tm_msg_postproc.ksh  tm_msg_postproc.ksh.in
scr/attic/: msg_rgb_remap_all.py  seviri_lonlat.py
src/: Makefile.in  getChannel.py  libmsg_channel.c  libmsg_channel.h  msg_data.py  py_msgmodule.c
test/: testimage.py  testsuite
